--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dist": "rm -rf build && prettier --write src/ && tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/argon2": "^0.15.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.38",
     "concurrently": "^7.2.1",
@@ -20,8 +23,15 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
+    "argon2": "^0.28.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-winston": "^4.2.0",
+    "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.6",
+    "winston": "^3.7.2"
   },
   "engines": {
     "node": "16.x",
