--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "start": "node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dist": "rm -rf build && prettier --write src/ && tsc"
+    "dist": "rm -rf build && prettier --write src/ && tsc",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/argon2": "^0.15.0",
+    "@types/config": "^0.0.41",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.38",
@@ -24,8 +26,10 @@
   },
   "dependencies": {
     "argon2": "^0.28.5",
+    "config": "^3.3.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "envalid": "^7.3.1",
     "express": "^4.18.1",
     "express-winston": "^4.2.0",
     "pg": "^8.7.3",
